--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -1,2 +1,5 @@
-<h1>Questions#edit</h1>
-<p>Find me in app/views/questions/edit.html.erb</p>
+# app/views/questions/edit.html.erb
+
+<h1>Edit Question</h1>
+
+<%= render 'form' %>
