--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,2 +1,5 @@
-<h1>Questions#new</h1>
-<p>Find me in app/views/questions/new.html.erb</p>
+# app/views/questions/new.html.erb
+
+<h1>Create New Question</h1>
+
+<%= render 'form' %>
