added admin users

--- a/app/views/users/destroy.html.erb
+++ b/app/views/users/destroy.html.erb
@@ -1,2 +1,16 @@
-<h1>Users#destroy</h1>
-<p>Find me in app/views/users/destroy.html.erb</p>
+<% provide(:title, 'Logout') %>
+<!DOCTYPE html>
+<html>
+<head>
+</head>
+  <%= render 'shared/header' %>
+  <body>
+    <h1>Logout</h1>
+    <div class='container'>
+      <p>
+        You have logged out of Joepardy. Come play with us again soon!
+      </p>
+    </div>
+    <% end %>
+  </body>
+</html>
