--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,9 @@
+body {
+  margin-top: 50px;
+  padding: 50px;
+  background-color: yellow;
+}
+
 aside {
   section.user_info {
     margin-top: 20px;
@@ -15,7 +21,7 @@ aside {
       line-height: 1;
     }
     h1 {
-      font-size: 1.4em;
+      font-size: 1.6em;
       text-align: left;
       letter-spacing: -1px;
       margin-bottom: 3px;
@@ -43,4 +49,22 @@ input, textarea, select, .uneditable-input {
 
 input {
   height: auto !important;
+}
+
+
+
+#logo {
+  float: left;
+  margin-right: 10px;
+  font-size: 1.9em;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: -1px;
+  padding-top: 9px;
+  font-weight: bold;
+}
+
+#logo:hover {
+  color: #fff;
+  text-decoration: none;
 }
