--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,11 +1,21 @@
-<% provide(:title, 'All users') %>
+<% provide(:title, 'All Users') %>
+<!DOCTYPE html>
+<html>
+<%= render 'shared/header' %>
+<body>
+  <h1>All Users</h1>
+  <% provide(:title, 'All users') %>
 <h1>All users</h1>
-
-<ul class="users">
-  <% @users.each do |user| %>
-    <li>
-      <%= gravatar_for user %>
-      <%= link_to user.username %>
-    </li>
+<div class='container'>
+  <ul class="users">
+    <% @users.each do |user| %>
+      <li>
+        <%= gravatar_for user %>
+        <%= link_to user.username %>
+      </li>
   <% end %>
 </ul>
+</div>
+
+  </body>
+</html>
