--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,35 @@
 <% provide(:title, @user.username) %>
-<div class="row">
-  <aside class="col-md-4">
-    <section class="user_info">
-      <h1>
-        <%= gravatar_for @user %>
-        <%= @user.username %>
-        <%= @user.score %>
-      </h1>
-    </section>
-  </aside>
-</div>
+<!DOCTYPE html>
+<html>
+<head>
+</head>
+<%= render 'shared/header' %>
+<body>
+    <div class='container'>
+      <section class="user_info">
+        <table>
+          <tr>
+            <th><%= 'User Name' %></th>
+            <th><%= 'User Score' %></th>
+          </tr>
+          <tr>
+            <td>
+              <%= gravatar_for @user %>
+              <%= @user.username %>
+            </td>
+          </tr>
+          <tr>
+            <td class='score'>
+              <% if @user.score != nil %>
+              <%= @user.score %>
+              <% else %>
+              <%= 'No score yet!' %>
+            </td>
+          </tr>
+              <% end %>
+            <% end %>
+        </table>
+      </section>
+    </div>
+</body>
+</html>
