--- a/app/views/answers/new.html.erb
+++ b/app/views/answers/new.html.erb
@@ -6,13 +6,11 @@
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <p><%= @quiz.question.body %></p>
-    <%= simple_form_for(@answer) do |f| %>
-    <%= f.input :first_option %>
-    <%= f.input :second_option %>
-    <%= f.input :third_option %>
-    <%= f.input :correct_answer %>
-    <%= f.submit 'Create answer', class: 'btn btn-primary' %>
+    <p><%= @question.body %></p>
+    <%= simple_form_for(:answer, url: new_quiz_question_answer_path) do |f| %>
+      <%= f.input :option %>
+      <%= f.collection_radio_buttons :correct_answer, [[true, 'Yes'] ,[false, 'No']], :first, :last %> 
+      <%= f.submit 'Create answer', class: 'btn btn-primary' %>
     <% end %>
   </div>
 </div>
